[project]
name = "vllm-fit"
dynamic = ["version"]
description = "CLI tool to discover optimal vLLM engine arguments for any HuggingFace model on current user's hardware"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT license"}
authors = [
    {name = "Javad Anaraki"}
]
dependencies = [
    "huggingface-hub>=0.20.0",
    "pynvml>=11.5.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.scripts]
vllm-fit = "vllm_fit.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/vllm_fit/__init__.py"

[tool.semantic_release]
version_source = "tag"
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "python -m build"
commit_parser = "conventional"
allow_zero_version = true
major_on_zero = false
version_variables = ["src/vllm_fit/__init__.py:__version__"]
changelog_file = "CHANGELOG.md"